// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingHeader Component calls onNextMonth when the Next month button is clicked 1`] = `
<div>
  <header
    class="flex flex-col items-center justify-between border-b border-gray-200 py-4 lg:flex-row lg:flex-none"
    data-testid="booking-dialog"
  >
    <h1
      class="text-2xl font-semibold leading-6 text-gray-900 mb-4 lg:mb-0"
    >
      <time
        datetime="2024-07"
      >
        July 2024
      </time>
    </h1>
    <div
      class="flex flex-col items-center lg:flex-row lg:space-x-4"
    >
      <div
        class="relative flex items-center rounded-md bg-white shadow-sm mb-4 lg:mb-0 md:items-stretch"
      >
        <button
          class="flex h-9 w-12 items-center justify-center rounded-l-md border-y border-l border-gray-300 pr-1 text-gray-400 hover:text-gray-500 focus:relative md:w-9 md:pr-0 md:hover:bg-gray-50"
          type="button"
        >
          <span
            class="sr-only"
          >
            Previous month
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="border-x flex h-9 items-center justify-center border-y border-gray-300 px-3.5 text-sm font-semibold text-gray-900 hover:bg-gray-50 focus:relative md:block"
          type="button"
        >
          Today
        </button>
        <span
          class="relative -mx-px h-9 w-px bg-gray-300 md:hidden"
        />
        <button
          class="flex h-9 w-12 items-center justify-center rounded-r-md border-y border-r border-gray-300 pl-1 text-gray-400 hover:text-gray-500 focus:relative md:w-9 md:pl-0 md:hover:bg-gray-50"
          type="button"
        >
          <span
            class="sr-only"
          >
            Next month
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <button
        aria-controls="radix-:rf:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3 ml-2 undefined"
        data-state="closed"
        type="button"
      >
        <svg
          class="lucide lucide-plus w-4 h-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Reservation
      </button>
    </div>
  </header>
</div>
`;

exports[`BookingHeader Component calls onPreviousMonth when the Previous month button is clicked 1`] = `
<div>
  <header
    class="flex flex-col items-center justify-between border-b border-gray-200 py-4 lg:flex-row lg:flex-none"
    data-testid="booking-dialog"
  >
    <h1
      class="text-2xl font-semibold leading-6 text-gray-900 mb-4 lg:mb-0"
    >
      <time
        datetime="2024-07"
      >
        July 2024
      </time>
    </h1>
    <div
      class="flex flex-col items-center lg:flex-row lg:space-x-4"
    >
      <div
        class="relative flex items-center rounded-md bg-white shadow-sm mb-4 lg:mb-0 md:items-stretch"
      >
        <button
          class="flex h-9 w-12 items-center justify-center rounded-l-md border-y border-l border-gray-300 pr-1 text-gray-400 hover:text-gray-500 focus:relative md:w-9 md:pr-0 md:hover:bg-gray-50"
          type="button"
        >
          <span
            class="sr-only"
          >
            Previous month
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="border-x flex h-9 items-center justify-center border-y border-gray-300 px-3.5 text-sm font-semibold text-gray-900 hover:bg-gray-50 focus:relative md:block"
          type="button"
        >
          Today
        </button>
        <span
          class="relative -mx-px h-9 w-px bg-gray-300 md:hidden"
        />
        <button
          class="flex h-9 w-12 items-center justify-center rounded-r-md border-y border-r border-gray-300 pl-1 text-gray-400 hover:text-gray-500 focus:relative md:w-9 md:pl-0 md:hover:bg-gray-50"
          type="button"
        >
          <span
            class="sr-only"
          >
            Next month
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <button
        aria-controls="radix-:r9:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3 ml-2 undefined"
        data-state="closed"
        type="button"
      >
        <svg
          class="lucide lucide-plus w-4 h-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Reservation
      </button>
    </div>
  </header>
</div>
`;

exports[`BookingHeader Component calls onToday when the Today button is clicked 1`] = `
<div>
  <header
    class="flex flex-col items-center justify-between border-b border-gray-200 py-4 lg:flex-row lg:flex-none"
    data-testid="booking-dialog"
  >
    <h1
      class="text-2xl font-semibold leading-6 text-gray-900 mb-4 lg:mb-0"
    >
      <time
        datetime="2024-07"
      >
        July 2024
      </time>
    </h1>
    <div
      class="flex flex-col items-center lg:flex-row lg:space-x-4"
    >
      <div
        class="relative flex items-center rounded-md bg-white shadow-sm mb-4 lg:mb-0 md:items-stretch"
      >
        <button
          class="flex h-9 w-12 items-center justify-center rounded-l-md border-y border-l border-gray-300 pr-1 text-gray-400 hover:text-gray-500 focus:relative md:w-9 md:pr-0 md:hover:bg-gray-50"
          type="button"
        >
          <span
            class="sr-only"
          >
            Previous month
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="border-x flex h-9 items-center justify-center border-y border-gray-300 px-3.5 text-sm font-semibold text-gray-900 hover:bg-gray-50 focus:relative md:block"
          type="button"
        >
          Today
        </button>
        <span
          class="relative -mx-px h-9 w-px bg-gray-300 md:hidden"
        />
        <button
          class="flex h-9 w-12 items-center justify-center rounded-r-md border-y border-r border-gray-300 pl-1 text-gray-400 hover:text-gray-500 focus:relative md:w-9 md:pl-0 md:hover:bg-gray-50"
          type="button"
        >
          <span
            class="sr-only"
          >
            Next month
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <button
        aria-controls="radix-:rl:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3 ml-2 undefined"
        data-state="closed"
        type="button"
      >
        <svg
          class="lucide lucide-plus w-4 h-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Reservation
      </button>
    </div>
  </header>
</div>
`;

exports[`BookingHeader Component renders the BookingDialog component 1`] = `
<div>
  <header
    class="flex flex-col items-center justify-between border-b border-gray-200 py-4 lg:flex-row lg:flex-none"
    data-testid="booking-dialog"
  >
    <h1
      class="text-2xl font-semibold leading-6 text-gray-900 mb-4 lg:mb-0"
    >
      <time
        datetime="2024-07"
      >
        July 2024
      </time>
    </h1>
    <div
      class="flex flex-col items-center lg:flex-row lg:space-x-4"
    >
      <div
        class="relative flex items-center rounded-md bg-white shadow-sm mb-4 lg:mb-0 md:items-stretch"
      >
        <button
          class="flex h-9 w-12 items-center justify-center rounded-l-md border-y border-l border-gray-300 pr-1 text-gray-400 hover:text-gray-500 focus:relative md:w-9 md:pr-0 md:hover:bg-gray-50"
          type="button"
        >
          <span
            class="sr-only"
          >
            Previous month
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="border-x flex h-9 items-center justify-center border-y border-gray-300 px-3.5 text-sm font-semibold text-gray-900 hover:bg-gray-50 focus:relative md:block"
          type="button"
        >
          Today
        </button>
        <span
          class="relative -mx-px h-9 w-px bg-gray-300 md:hidden"
        />
        <button
          class="flex h-9 w-12 items-center justify-center rounded-r-md border-y border-r border-gray-300 pl-1 text-gray-400 hover:text-gray-500 focus:relative md:w-9 md:pl-0 md:hover:bg-gray-50"
          type="button"
        >
          <span
            class="sr-only"
          >
            Next month
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <button
        aria-controls="radix-:rr:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3 ml-2 undefined"
        data-state="closed"
        type="button"
      >
        <svg
          class="lucide lucide-plus w-4 h-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Reservation
      </button>
    </div>
  </header>
</div>
`;

exports[`BookingHeader Component renders the current month 1`] = `
<div>
  <header
    class="flex flex-col items-center justify-between border-b border-gray-200 py-4 lg:flex-row lg:flex-none"
    data-testid="booking-dialog"
  >
    <h1
      class="text-2xl font-semibold leading-6 text-gray-900 mb-4 lg:mb-0"
    >
      <time
        datetime="2024-07"
      >
        July 2024
      </time>
    </h1>
    <div
      class="flex flex-col items-center lg:flex-row lg:space-x-4"
    >
      <div
        class="relative flex items-center rounded-md bg-white shadow-sm mb-4 lg:mb-0 md:items-stretch"
      >
        <button
          class="flex h-9 w-12 items-center justify-center rounded-l-md border-y border-l border-gray-300 pr-1 text-gray-400 hover:text-gray-500 focus:relative md:w-9 md:pr-0 md:hover:bg-gray-50"
          type="button"
        >
          <span
            class="sr-only"
          >
            Previous month
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="border-x flex h-9 items-center justify-center border-y border-gray-300 px-3.5 text-sm font-semibold text-gray-900 hover:bg-gray-50 focus:relative md:block"
          type="button"
        >
          Today
        </button>
        <span
          class="relative -mx-px h-9 w-px bg-gray-300 md:hidden"
        />
        <button
          class="flex h-9 w-12 items-center justify-center rounded-r-md border-y border-r border-gray-300 pl-1 text-gray-400 hover:text-gray-500 focus:relative md:w-9 md:pl-0 md:hover:bg-gray-50"
          type="button"
        >
          <span
            class="sr-only"
          >
            Next month
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <button
        aria-controls="radix-:r3:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3 ml-2 undefined"
        data-state="closed"
        type="button"
      >
        <svg
          class="lucide lucide-plus w-4 h-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Reservation
      </button>
    </div>
  </header>
</div>
`;
